// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenstaxMetadataForm Book inputs correctly modifies inputs 1`] = `
{
  "assignment_type": null,
  "blooms": null,
  "books": [
    {
      "aacn": "not-modified-0",
      "name": "stax-nutrition",
    },
    {
      "aacn": "modified",
      "name": "stax-pharmacology",
    },
    {
      "aacn": "not-modified-1",
      "name": "stax-pophealth",
    },
  ],
  "context": [],
  "dok": null,
  "errata_id": "test",
  "nickname": "new",
  "time": null,
}
`;

exports[`OpenstaxMetadataForm Book inputs correctly modifies inputs in a set 1`] = `
{
  "assignment_type": null,
  "blooms": null,
  "books": [
    {
      "lo": [
        "not-modified-2",
        "stax-psy.lo[1]",
        "not-modified-3",
      ],
      "name": "stax-psy",
    },
    {
      "lo": [
        "not-modified-4",
      ],
      "name": "stax-anything",
    },
    {
      "name": "stax-amfg",
    },
  ],
  "context": [],
  "dok": null,
  "errata_id": "test",
  "nickname": "new",
  "time": null,
}
`;

exports[`OpenstaxMetadataForm Book inputs handleBookChange keeps input values when they exist on the new book 1`] = `
{
  "assignment_type": null,
  "blooms": null,
  "books": [
    {
      "lo": [
        "test-carry-state-to-stax-usgovt",
      ],
      "name": "stax-usgovt",
    },
    {
      "lo": [
        "test-keep-state-on-stax-psy",
      ],
      "name": "stax-psy",
    },
  ],
  "context": [],
  "dok": null,
  "errata_id": "test",
  "nickname": "new",
  "time": null,
}
`;

exports[`OpenstaxMetadataForm Form validation does not save when information is missing 1`] = `[]`;

exports[`OpenstaxMetadataForm Form validation does not save when information is missing 2`] = `
[
  [
    "OpenStax Metadata: Value for "nickname" is invalid",
  ],
]
`;

exports[`OpenstaxMetadataForm encode/decode form state decodes form state when loading and encodes when saving 1`] = `
{
  "aacn": [],
  "aplo": [],
  "books": [],
  "context": [],
  "errata_id": {
    "isValid": true,
    "value": "test",
  },
  "hts": [],
  "lo": [],
  "nclex": [],
  "rp": [],
  "science_practice": [],
}
`;

exports[`OpenstaxMetadataForm encode/decode form state decodes form state when loading and encodes when saving 2`] = `
{
  "assignment_type": null,
  "blooms": null,
  "books": [
    {
      "lo": [
        "00-00-01",
      ],
      "name": "stax-psy",
    },
    {
      "aplo": [
        "ABC.0.F",
      ],
      "name": "stax-apbio",
      "science_practice": "concept-explanation",
    },
  ],
  "context": [
    "m00003#term-03",
  ],
  "dok": null,
  "errata_id": "test",
  "nickname": "new",
  "time": null,
}
`;
